# fl-haskell-sortedtree

./: fl-haskell.cabal
app/: Main.hs
src/: sortedtree.hs
test/: Check.hs
